<resources>
    <string name="app_name">MyPicture</string>
    <!--个人中心-->
    <string name="login">登录</string>
    <string name="set">设置</string>
    <string name="information">个人资料</string>
    <string name="account">账户密码</string>
    <string name="about">关于</string>
    <string name="feedback">反馈</string>

    <!--个人资料-->
    <string name="head">头像</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
</resources>
