<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/id_Myself_LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/id_Myself_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/panda"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/id_Myself_login"
            style="@style/MineItem"
            android:text="@string/login" />
    </LinearLayout>


    <View style="@style/View_line"></View>

    <TextView
        android:id="@+id/id_Myself_information"
        style="@style/MineItem"
        android:text="@string/information" />

    <TextView
        android:id="@+id/id_Myself_account"
        style="@style/MineItem"
        android:text="@string/account" />

    <TextView
        android:id="@+id/id_Myself_set"
        style="@style/MineItem"
        android:text="@string/set" />

    <TextView
        android:id="@+id/id_Myself_about"
        style="@style/MineItem"
        android:text="@string/about" />

    <TextView
        android:id="@+id/id_Myself_feedback"
        style="@style/MineItem"
        android:text="@string/feedback" />
</LinearLayout>