<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <RelativeLayout
        android:id="@+id/id_information_head_RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <TextView
            style="@style/InformationItem"
            android:text="@string/head" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/id_information_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:src="@mipmap/panda" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_information_name_RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="2dp"
        android:background="@color/white">

        <TextView
            style="@style/InformationItem"
            android:text="@string/name" />

        <TextView
            android:id="@+id/id_information_name_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:textColor="@color/gray" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_information_sex_RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="2dp"
        android:background="@color/white">

        <TextView
            style="@style/InformationItem"
            android:text="@string/sex" />

        <TextView
            android:id="@+id/id_information_sex_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:textColor="@color/gray" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right" />
    </RelativeLayout>
</LinearLayout>